add reason to equipment modifiers, update deserialization, mekview